# loopstura

./: .gitmodules  CMakeLists.txt  LICENSE.txt  README.md  make-win.bat  shell.html
lib/ffmpeg/android/: config-arm64-v8a.txt  config-armeabi-v7a.txt  config-x86.txt  config-x86_64.txt
lib/ffmpeg/windows/: config-arm.txt  config-arm64.txt  config-x86.txt
lib/ffmpeg/windows/include/libavcodec/: avcodec.h
lib/ffmpeg/windows/include/libavutil/: ffversion.h
lib/ffmpeg/windows/lib/arm/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  ffmpeg.lib  swresample.lib  swscale.lib
lib/ffmpeg/windows/lib/arm/pkgconfig/: libavcodec.pc  libavdevice.pc  libavutil.pc
lib/ffmpeg/windows/lib/arm64/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil-56.def  avutil.lib  ffmpeg.lib  swresample.lib  swscale.lib
lib/ffmpeg/windows/lib/arm64/pkgconfig/: libavfilter.pc  libavformat.pc  libswresample.pc
lib/ffmpeg/windows/lib/x64/: avcodec.lib  avfilter.lib  avformat.lib  avutil-56.def  avutil.lib  ffmpeg-4.def  ffmpeg.lib  swscale.lib
lib/ffmpeg/windows/lib/x64/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswscale.pc
lib/ffmpeg/windows/lib/x86/: avcodec-58.def  avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil.lib  ffmpeg.lib  swresample.lib  swscale.lib
lib/ffmpeg/windows/lib/x86/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc
lib/imgui_plot/imgui_plot/: imgui_plot.cpp  imgui_plot.h
lib/sdl/osx/SDL2.framework/Versions/A/: SDL2
lib/sdl/osx/SDL2_ttf.framework/Versions/A/: SDL2_ttf
lib/sdl/osx/SDL2_ttf.framework/Versions/A/Headers/: SDL_ttf.h
lib/sdl/osx/SDL2_ttf.framework/Versions/A/Resources/: Info.plist
lib/winmmap/winmmap/: windows-mmap.h
src/: Application.cpp  Application.hpp  Audio.cpp  Audio.hpp  Client.cpp  Client.hpp  Component.hpp  Context.cpp  Context.hpp  DisplayNode.cpp  DisplayNode.hpp  Instance.hpp  MappedFile.hpp  Math.hpp  Platform.hpp  Property.cpp  Property.hpp  Quad.cpp  Quad.hpp  Renderer.cpp  Renderer.hpp  RingBuffer.hpp  Stream.hpp  Texture.cpp  Texture.hpp  Timer.hpp  Worker.cpp
src/audio/: Device.cpp  Device.hpp  Track.cpp  Track.hpp  WAVFile.cpp  WAVFile.hpp  Waveform.cpp  Waveform.hpp
src/components/: ButtonComponent.cpp  ButtonComponent.hpp  WaveformComponent.cpp  WaveformComponent.hpp
src/concurrency/: RingBuffer.hpp  SpinLock.hpp  Worker.hpp
src/file/: MappedFile.cpp  MappedFile.hpp  WAVFile.cpp  WAVFile.hpp
src/main/: FileSDL.cpp  FileSDL.hpp  MainSDL.cpp  MainWeb.cpp  SDL.hpp  SDLMain.cpp  SDLMainWeb.cpp
src/opengl/: GL.cpp  GL.hpp  GLFrameBuffer.cpp  GLFrameBuffer.hpp  GLImgui.cpp  GLImgui.hpp  GLInstance.cpp  GLInstance.hpp  GLInstanceImgui.cpp  GLInstanceImgui.hpp  GLInstanceUI.cpp  GLInstanceUI.hpp  GLInterfaceInstance.cpp  GLInterfaceInstance.hpp  GLInterfaceShader.cpp  GLInterfaceShader.hpp  GLMaterial.cpp  GLMaterial.hpp  GLMesh.cpp  GLMesh.hpp  GLRenderer.cpp  GLRenderer.hpp  GLShader.cpp  GLShader.hpp  GLStream.cpp  GLStream.hpp  GLTexture.cpp  GLTexture.hpp  GLUserInterface.cpp  GLUserInterface.hpp
src/opengl/instances/: GLEnvironmentInstance.cpp  GLEnvironmentInstance.hpp  GLInstanceBasic.cpp  GLInstanceBasic.hpp  GLInterfaceInstance.cpp  GLInterfaceInstance.hpp
src/opengl/materials/: GLMaterialBasic.cpp  GLMaterialBasic.hpp
src/opengl/rendering/: GLInstanceBasic.cpp  GLInstanceBasic.hpp  GLInstanceImgui.hpp  GLInstanceUI.cpp  GLInstanceUI.hpp
src/opengl/shaders/: GLShaderBasic.cpp  GLShaderBasic.hpp
src/properties/: Animator.cpp  Animator.hpp  Easing.cpp  Easing.hpp  Manager.cpp  Manager.hpp  Property.cpp  Property.hpp
src/rendering/: Imgui.cpp  Imgui.hpp  Instance.hpp  InstanceBasic.cpp  InstanceBasic.hpp  InstanceImgui.cpp  InstanceImgui.hpp  InstanceUI.cpp  InstanceUI.hpp  Renderer.cpp  Renderer.hpp  Stream.hpp  Texture.cpp  Texture.hpp  UserInterface.cpp  UserInterface.hpp
src/sdl/: SDLAudio.cpp  SDLAudio.hpp  SDLFile.cpp  SDLFile.hpp  SDLImgui.hpp  SDLMain.cpp  SDLMainWeb.cpp  SDLTrack.cpp  SDLTrack.hpp
src/signal/: DFT.cpp  FFT.cpp  FFT.hpp  Wavelets.cpp  Windowing.hpp
